update FEWD class project

--- a/FEWD/index.html
+++ b/FEWD/index.html
@@ -6,15 +6,51 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
+  <div class="nav">
+    <a href="#"><img class="logo" src="images/logo.png"></a>
+    <ul>
+      <li><a href="#">Gym</a></li>
+      <li><a href="#">Gear</a></li>
+      <li><a href="#">Rock</a></li>
+      <li><a href="#">Ice</a></li>
+    </ul>
+  </div>
   <div class="container">
+    <h1 class="title">Take your climbing to the next level</h1>
+    <div id="categories">
+      <ul>
+        <li>
+          <div class="tall-photo">
+            <a href="#"><img src="images/gym.jpg"></a>
+            <div>Gym</div>
+          </div>
+        </li>
+        <li>
+          <div class="tall-photo">
+            <a href="#"><img src="images/gear.jpg"></a>
+            <div>Gear</div>
+          </div>
+        </li>
+        <li>
+          <div class="tall-photo">
+            <a href="#"><img src="images/rock.jpg"></a>
+            <div>Rock</div>
+          </div>
+        </li>
+        <li>
+          <div class="tall-photo">
+            <a href="#"><img src="images/ice.jpg"></a>
+            <div>Ice</div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</body>
 
-    <h1>Hi, I'm David</h1>
-    <p> Most of my time I'm programming in Ruby or Rock climbing. Ruby ain't so good at making the web look pretty. Which brings me here.</p>
 
-    This is me. Or at least it was. The photo is kinda old.
-    <br>
 
-    <img class="profile_img image" src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/398907_10151142581028942_183152983_n.jpg">
+    <!-- <img class="profile_img image" src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/398907_10151142581028942_183152983_n.jpg">
 
     <div>
       <dl>
@@ -41,8 +77,7 @@
           </dd>
         </a>
       </dl>
-    </div>
-  </div>
-</body>
+    </div> -->
+
 
 
