--- a/FEWD/images/index.html
+++ b/FEWD/images/index.html
@@ -1,1 +1,46 @@
+<!doctype html>
+<html>
+<head>
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+<body>
+  <div class="container">
 
+    <h1>Hi, I'm David</h1>
+    <p> Most of my time I'm programming in Ruby or Rock climbing. Ruby ain't so good at making the web look pretty. Which brings me here.</p>
+
+    This is me. Or at least it was. The photo is kinda old.
+    <br>
+
+    <img class="profile_img image" src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/398907_10151142581028942_183152983_n.jpg">
+
+    <div>
+      <dl>
+        <a href="http://tapjoy.com">
+          <dt>Where I work</dt>
+          <dd>
+           <img class="image" src="http://kevintu.com/projects/thumbs/tapjoy.png">
+          </dd>
+        </a>
+      </dl>
+      <dl>
+       <a href="http://www.yosemiteconservancy.org/">
+          <dt>Where I climb</dt>
+          <dd>
+            <img class="image" src="http://www.valleyoutdoors.com/Hikes/images/halfdome.jpg">
+          </dd>
+        </a>
+      </dl>
+      <dl>
+        <a href="http://adventuring.herokuapp.com/">
+          <dt>A Project I'm working on</dt>
+          <dd>
+            <img class ="image" src="http://adventuring.herokuapp.com/assets/routine-02df4d5a7ef4295afb004c6c5c354f02.jpg">
+          </dd>
+        </a>
+      </dl>
+    </div>
+  </div>
+</body>
