--- a/FEWD/homework/adventuring/index.html
+++ b/FEWD/homework/adventuring/index.html
@@ -10,97 +10,118 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="http://www.fillmurray.com/360/200" height=40 width= 70 alt="logo image">
-      </div>
+      <a href="#">
+        <div class="logo">
+          <img src="http://www.fillmurray.com/360/200" height=40 width= 70 alt="logo image">
+        </div>
+       </a>
       <div class="nav">
         <ul>
-          <li>sign in</li>
-          <li>categories</li>
-          <li>cities</li>
+          <a href="#"><li>sign in</li></a>
+          <a href="#"><li>categories</li></a>
+          <a href="#"><li>cities</li></a>
         </ul>
       </div>
     </header>
     <div class="hero_bar">
       <div class="search group">
+        <input type="submit" value="Submit">
         <input type="text" placeholder="search for classes">
       </div>
     </div>
     <div class="container">
       <div class="main_content">
         <h1>Courses</h1>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
           </div>
-        </div>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
+        </a>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
           </div>
-        </div>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
+        </a>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
           </div>
-        </div>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
+        </a>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
           </div>
-        </div>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
+        </a>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
           </div>
-        </div>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
+        </a>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
           </div>
-        </div>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
+        </a>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
           </div>
-        </div>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
+        </a>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
           </div>
-        </div>
-        <div class="course">
-          <img class="course_image" src="http://www.fillmurray.com/360/200">
-          <div class="course_info">
-            <div class="course_name">Course Name</div>
-            <div class="price">$99</div>
-            <div class="location">San Francisco</div>
-          </div>
-        </div>
+        </a>
+        <a href="#">
+          <div class="course">
+            <img class="course_image" src="http://www.fillmurray.com/360/200">
+            <div class="course_info">
+              <div class="course_name">Course Name</div>
+              <div class="price">$99</div>
+              <div class="location">San Francisco</div>
+            </div>
+          </a></div
+          >
 
 
 
