--- a/FEWD/homework/adventuring/index.html
+++ b/FEWD/homework/adventuring/index.html
@@ -5,6 +5,7 @@
     <title>Adventuring</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
+    <link href='http://fonts.googleapis.com/css?family=Piedra' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
@@ -110,69 +111,56 @@
         <a href="#">
           <div class="course">
             <div class="course_photo">
-              <img width=360 src="images/roof.jpg">
+              <img width=360 src="images/hangglide.jpg">
             </div>
             <div class="course_info">
-              <div class="course_name">Course Name</div>
-              <div class="price">$99</div>
-              <div class="location">San Francisco</div>
+              <div class="course_name">Beggining Hang Gliding</div>
+              <div class="price">$89</div>
+              <div class="location">Fort Funston</div>
             </div>
           </div>
         </a>
         <a href="#">
           <div class="course">
             <div class="course_photo">
-              <img width=360 src="images/roof.jpg">
+              <img width=360 src="images/mountaineering.jpg">
             </div>
             <div class="course_info">
-              <div class="course_name">Course Name</div>
-              <div class="price">$99</div>
-              <div class="location">San Francisco</div>
+              <div class="course_name">Mountianeering</div>
+              <div class="price">$129</div>
+              <div class="location">Mt Whitney</div>
             </div>
           </div>
         </a>
-        <a href="#">
-          <div class="course">
-            <div class="course_photo">
-              <img width=360 src="images/roof.jpg">
-            </div>
-            <div class="course_info">
-              <div class="course_name">Course Name</div>
-              <div class="price">$99</div>
-              <div class="location">San Francisco</div>
-            </div>
-          </a></div
-          >
-
-
-
-
+        </div>
       </div>
     </div>
     <footer>
       <div class="footer_liner">
         <div class="footer_column">
+          <h2>How it Works</h2>
           <ul>
-            <li><a href="#">one</a></li>
-            <li><a href="#">two</a></li>
-            <li><a href="#">three</a></li>
-            <li><a href="#">four</a></li>
+            <li><a href="#">Guidelines</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Guarantee</a></li>
           </ul>
         </div>
         <div class="footer_column">
+          <h2>Company</h2>
           <ul>
-            <li><a href="#">one</a></li>
-            <li><a href="#">two</a></li>
-            <li><a href="#">three</a></li>
-            <li><a href="#">four</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Team</a></li>
           </ul>
         </div>
         <div class="footer_column">
+          <h2>Locations</h2>
           <ul>
-            <li><a href="#">one</a></li>
-            <li><a href="#">two</a></li>
-            <li><a href="#">three</a></li>
-            <li><a href="#">four</a></li>
+            <li><a href="#">Bay Area</a></li>
+            <li><a href="#">New York</a></li>
+            <li><a href="#">Boulder</a></li>
+            <li><a href="#">Los Angeles</a></li>
           </ul>
         </div>
       </div>
