finishing css for course page

--- a/FEWD/homework/adventuring/index.html
+++ b/FEWD/homework/adventuring/index.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Piedra' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
@@ -37,7 +38,7 @@
     <div class="container">
       <div class="main_content">
         <h1>Courses</h1>
-        <a href="#">
+        <a href="class.html">
           <div class="course">
             <div class="course_photo">
               <img src="images/roof.jpg">
@@ -49,7 +50,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="class.html">
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/sail.jpg">
@@ -60,7 +61,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="class.html">
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/mountain_bike.jpg">
@@ -72,7 +73,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="class.html">
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/scuba.jpg">
@@ -84,7 +85,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="class.html">
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/canyoneering.jpg">
@@ -96,7 +97,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="class.html">
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/skydive.jpg">
@@ -108,7 +109,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="class.html">
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/hangglide.jpg">
@@ -120,7 +121,7 @@
             </div>
           </div>
         </a>
-        <a href="#">
+        <a href="class.html">
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/mountaineering.jpg">
