--- a/FEWD/homework/slideshow_2/index.html
+++ b/FEWD/homework/slideshow_2/index.html
@@ -10,17 +10,32 @@
   </head>
   <body>
 
-    <div class="next">Next Slide</div>
+    <div class="slideshow_group"><h1>Slide Show 1</h1>
+      <div class="button" id="next_1">Next Slide</div>
 
-    <div id="slideshow">
-      <img src="img/chess.jpg" width="300" />
-      <img src="img/boston.jpg" width="300" />
-      <img src="img/frog.jpg" width="300" />
+      <div id="slideshow1">
+        <img src="img/chess.jpg"  height="300px"/>
+        <img src="img/boston.jpg" height="300px" />
+        <img src="img/frog.jpg"   height="300px" />
+      </div>
+    </div>
+
+    <div class="slideshow_group"><h1>Slide Show 2</h1>
+      <div class="button" id="next_2">Next Slide</div>
+
+      <div id="slideshow2">
+        <img src="img/chess.jpg" width="300" />
+        <img src="img/boston.jpg" width="300" />
+        <img src="img/frog.jpg" width="300" />
+      </div>
     </div>
 
 
     <script src="js/jquery.js"></script>
     <script src="js/library.js"></script>
+    <script type="text/javascript" src="http://malsup.github.com/chili-1.7.pack.js"></script>
+    <script type="text/javascript" src="http://malsup.github.com/jquery.cycle.all.js"></script>
+    <script type="text/javascript" src="http://malsup.github.com/jquery.easing.1.3.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
