--- a/FEWD/homework/adventuring/class.html
+++ b/FEWD/homework/adventuring/class.html
@@ -32,8 +32,11 @@
       <div class="main">
         <div class="course_content">
           <div class="title">Intermediate Rock Climing</div>
+          <img class='arrow' src="images/arrow-next.png" height='100px'>
           <div class="main_image">
             <img src="images/rock_climbing_tower.jpg">
+            <img src="images/rock_standing.jpg">
+            <img src="images/cam_climbing.jpg">
           </div>
           <div class="description_group">
             <h1>Course Info</h1>
@@ -182,5 +185,9 @@
         </div>
       </div>
     </footer>
+    <script src="js/jquery.js"></script>
+    <script src="http://malsup.github.com/jquery.cycle.all.js"></script>
+    <script src="http://malsup.github.com/jquery.easing.1.3.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
