added login and company pages

--- a/FEWD/homework/adventuring/class.html
+++ b/FEWD/homework/adventuring/class.html
@@ -21,7 +21,7 @@
        </a>
       <div class="nav">
         <ul>
-          <a href="#"><li>sign in</li></a>
+          <a href="sign_in.html"><li>sign in</li></a>
           <a href="#"><li>categories</li></a>
           <a href="#"><li class='last'>cities</li></a>
         </ul>
@@ -134,21 +134,21 @@
 
         <div class="company">
           <p>Company Profile</p>
-          <a href="#">
+          <a href="company_profile.html">
             <div class="image">
               <img src="images/mountain_high.jpg">
             </div>
           </a>
-          <div class="name">Mountian High Adventures.</div>
+          <div class="name">Mountian High Adventures</div>
           <hr>
           <div class="other_courses">
             <p>Other Courses</p>
             <ul>
               <a href="#"><li>Self Rescue</li></a>
-              <a href="#"><li>Big Wall Climing</li></a>
+              <a href="#"><li>Big Wall Clinic</li></a>
               <a href="#"><li>Begining Rock Climing</li></a>
               <a href="#"><li>Lead Climing</li></a>
-              <a href="#"><li>Mountaineering</li></a>
+              <a href="#"><li>Two Day Canyoneering Trip</li></a>
             </ul>
           </div>
         </div>
