--- a/FEWD/homework/adventuring/index.html
+++ b/FEWD/homework/adventuring/index.html
@@ -20,7 +20,7 @@
        </a>
       <div class="nav">
         <ul>
-          <a href="#"><li>sign in</li></a>
+          <a href="sign_in.html"><li>sign in</li></a>
           <a href="#"><li>categories</li></a>
           <a href="#"><li class='last'>cities</li></a>
         </ul>
@@ -42,6 +42,8 @@
           <div class="course">
             <div class="course_photo">
               <img src="images/roof.jpg">
+              <img src="images/rock_climbing_1.jpg">
+              <img src="images/rock_climbing_2.jpg">
             </div>
             <div class="course_info">
               <div class="course_name">Intermediate Rock Climbing</div>
@@ -54,7 +56,11 @@
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/sail.jpg">
-            </div>     <div class="course_info">
+              <img width=360 src="images/sailing_1.jpg">
+              <img width=360 src="images/sailing_2.jpg">
+              <img width=360 src="images/sailing_3.jpg">
+            </div>
+            <div class="course_info">
               <div class="course_name">Beginning Sailing</div>
               <div class="price">$125</div>
               <div class="location">San Francisco</div>
@@ -166,5 +172,9 @@
         </div>
       </div>
     </footer>
+    <script src="js/jquery.js"></script>
+    <script src="http://malsup.github.com/jquery.cycle.all.js"></script>
+    <script src="http://malsup.github.com/jquery.easing.1.3.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
