added jquery transitions to site

--- a/FEWD/homework/adventuring/company_profile.html
+++ b/FEWD/homework/adventuring/company_profile.html
@@ -35,9 +35,6 @@
           <img class='arrow' src="images/arrow-next.png" height='100px'>
           <div class="main_image">
             <img src="images/mountain_high.jpg">
-            <img src="images/rock_climbing_tower.jpg">
-            <img src="images/rock_standing.jpg">
-            <img src="images/cam_climbing.jpg">
             <img src="images/mountain_high1.jpg">
             <img src="images/mountain_high2.jpg">
             <img src="images/mountain_high3.jpg">
@@ -99,14 +96,38 @@
           <div class="course">
             <div class="course_name">Intermediate Rock Climbing</div>
             <img src="images/roof.jpg">
+            <div class="course_overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 17th
+              </div>
+            </div>
           </div>
           <div class="course">
             <div class="course_name">Two Day Canyoneering Trip</div>
             <img src="images/canyoneering.jpg">
+            <div class="course_overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 29th
+              </div>
+            </div>
           </div>
           <div class="course">
             <div class="course_name">Big Wall Clinic</div>
             <img src="images/big_wall_class3.jpg" height='200px'>
+            <div class="course_overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 21st
+              </div>
+            </div>
           </div>
         </div>
 
