--- a/FEWD/homework/adventuring/index.html
+++ b/FEWD/homework/adventuring/index.html
@@ -27,6 +27,7 @@
       </div>
     </header>
     <div class="hero_bar">
+      <img class="hero_image" src="images/el_cap_2.jpg">
       <div class="search">
         <h1>Find Your Adventure</h1>
         <form name="search" action="index.html" method="get">
@@ -45,6 +46,14 @@
               <img src="images/rock_climbing_1.jpg">
               <img src="images/rock_climbing_2.jpg">
             </div>
+            <div class="overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 17th
+              </div>
+            </div>
             <div class="course_info">
               <div class="course_name">Intermediate Rock Climbing</div>
               <div class="price">$99</div>
@@ -60,6 +69,14 @@
               <img width=360 src="images/sailing_2.jpg">
               <img width=360 src="images/sailing_3.jpg">
             </div>
+            <div class="overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 22nd
+              </div>
+            </div>
             <div class="course_info">
               <div class="course_name">Beginning Sailing</div>
               <div class="price">$125</div>
@@ -71,6 +88,14 @@
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/mountain_bike.jpg">
+            </div>
+            <div class="overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 29th
+              </div>
             </div>
             <div class="course_info">
               <div class="course_name">Technical Mountain Biking</div>
@@ -84,6 +109,14 @@
             <div class="course_photo">
               <img width=360 src="images/scuba.jpg">
             </div>
+            <div class="overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 1st
+              </div>
+            </div>
             <div class="course_info">
               <div class="course_name">Rescue Diving</div>
               <div class="price">$179</div>
@@ -95,6 +128,14 @@
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/canyoneering.jpg">
+            </div>
+            <div class="overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 7th
+              </div>
             </div>
             <div class="course_info">
               <div class="course_name">Two Day Canyoneering Trip</div>
@@ -108,6 +149,14 @@
             <div class="course_photo">
               <img width=360 src="images/skydive.jpg">
             </div>
+            <div class="overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 10th
+              </div>
+            </div>
             <div class="course_info">
               <div class="course_name">Solo Skydiving</div>
               <div class="price">$100</div>
@@ -120,6 +169,14 @@
             <div class="course_photo">
               <img width=360 src="images/hangglide.jpg">
             </div>
+            <div class="overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 15th
+              </div>
+            </div>
             <div class="course_info">
               <div class="course_name">Beggining Hang Gliding</div>
               <div class="price">$89</div>
@@ -131,6 +188,14 @@
           <div class="course">
             <div class="course_photo">
               <img width=360 src="images/mountaineering.jpg">
+            </div>
+            <div class="overlay">
+              <div class="next_class">
+                Next Class
+              </div>
+              <div class="class_date">
+                Aug 20th
+              </div>
             </div>
             <div class="course_info">
               <div class="course_name">Mountianeering</div>
