--- a/FEWD/homework/adventuring/index.html
+++ b/FEWD/homework/adventuring/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <div class="hero_bar">
-      <img class="hero_image" src="images/el_cap_2.jpg">
+      <img class="hero_image" src="images/el_cap_2.JPG">
       <div class="search">
         <h1>Find Your Adventure</h1>
         <form name="search" action="index.html" method="get">
