--- a/FEWD/homework/adventuring/company_profile.html
+++ b/FEWD/homework/adventuring/company_profile.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/style_company_profile.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_create_company.css" />
     <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -23,7 +24,8 @@
         <ul>
           <a href="sign_in.html"><li>sign in</li></a>
           <a href="#"><li>categories</li></a>
-          <a href="#"><li class='last'>cities</li></a>
+          <a href="#"><li>cities</li></a>
+          <a href="account.html"><li class='last'>account</li></a>
         </ul>
       </div>
     </header>
@@ -195,6 +197,7 @@
       </div>
     </footer>
     <script src="js/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="http://malsup.github.com/jquery.cycle.all.js"></script>
     <script src="http://malsup.github.com/jquery.easing.1.3.js"></script>
     <script src="js/app.js"></script>
