--- a/FEWD/homework/adventuring/index.html
+++ b/FEWD/homework/adventuring/index.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Piedra' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -22,7 +23,8 @@
         <ul>
           <a href="sign_in.html"><li>sign in</li></a>
           <a href="#"><li>categories</li></a>
-          <a href="#"><li class='last'>cities</li></a>
+          <a href="#"><li>cities</li></a>
+          <a href="account.html"><li class='last'>account</li></a>
         </ul>
       </div>
     </header>
@@ -238,6 +240,7 @@
       </div>
     </footer>
     <script src="js/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="http://malsup.github.com/jquery.cycle.all.js"></script>
     <script src="http://malsup.github.com/jquery.easing.1.3.js"></script>
     <script src="js/app.js"></script>
