--- a/FEWD/homework/adventuring/sign_in.html
+++ b/FEWD/homework/adventuring/sign_in.html
@@ -22,9 +22,10 @@
        </a>
       <div class="nav">
         <ul>
-          <a href="#"><li>sign in</li></a>
+          <a href="sign_in.html"><li>sign in</li></a>
           <a href="#"><li>categories</li></a>
-          <a href="#"><li class='last'>cities</li></a>
+          <a href="#"><li>cities</li></a>
+          <a href="account.html"><li class='last'>account</li></a>
         </ul>
       </div>
     </header>
@@ -79,6 +80,7 @@
       </div>
     </footer>
     <script src="js/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="http://malsup.github.com/jquery.cycle.all.js"></script>
     <script src="http://malsup.github.com/jquery.easing.1.3.js"></script>
     <script src="js/app.js"></script>
