--- a/FEWD/homework/adventuring/sign_in.html
+++ b/FEWD/homework/adventuring/sign_in.html
@@ -37,7 +37,7 @@
         <form>
           <input class="sign_in_label" name="account[email]" placeholder="E-mail address" size="30" type="text">
           <input class="sign_in_label" name="account[password]" placeholder="Your password" size="30" type="password">
-          <input class="submit" type="submit" value="Submit">
+          <a href="index.html" class='login_link'><div class="login_submit">Submit</div></a>
         </form>
         <div class="forgot_password">
           <a href="#">Forgot your password?</a>
